<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_width="match_parent"
        android:layout_height="480dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="#675854"
            android:text="@string/_clear"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button11"
            android:backgroundTint="#675854"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_razdelite"
            android:textSize="@dimen/key_text_size" />


        <Button
            android:id="@+id/button12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="#675854"
            android:text="@string/_ymnojte"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="#675854"
            android:text="@string/_delete"
            android:textAllCaps="false"
            android:textSize="@dimen/key_text_size" /></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_1"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button2"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_2"
            android:textSize="@dimen/key_text_size" />

        <Button
            android:id="@+id/button3"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_3"
            android:textSize="@dimen/key_text_size" />
        <Button
            android:id="@+id/button14"
            android:backgroundTint="#675854"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_minus"
            android:textSize="@dimen/key_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
        android:textSize="@dimen/key_text_size"
            android:layout_margin="@dimen/margin_small"
        android:id="@+id/button4"
            android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_4" />


        <Button
            android:textSize="@dimen/key_text_size"
            android:layout_margin="@dimen/margin_small"
            android:id="@+id/button5"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_5" />

        <Button
            android:textSize="@dimen/key_text_size"
            android:layout_margin="@dimen/margin_small"
            android:id="@+id/button6"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_6" />
        <Button
            android:id="@+id/button15"
            android:backgroundTint="#675854"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_plus"
            android:textSize="@dimen/key_text_size" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
        android:textSize="@dimen/key_text_size"
            android:layout_margin="@dimen/margin_small"
        android:id="@+id/button7"
        android:layout_width="0dp"
            android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/_7" />

        <Button
            android:textSize="@dimen/key_text_size"
            android:layout_margin="@dimen/margin_small"
            android:id="@+id/button8"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_8" />

        <Button
            android:textSize="@dimen/key_text_size"
            android:layout_margin="@dimen/margin_small"
            android:id="@+id/button9"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_9" />
        <Button
            android:id="@+id/buttonDot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="1"
            android:backgroundTint="#675854"
            android:text="@string/_dot"
            android:textSize="@dimen/key_text_size" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/button0"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textSize="@dimen/key_text_size" />
        <Button
            android:id="@+id/button16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_small"
            android:layout_weight="4"
            android:backgroundTint="#B7FA0000"
            android:text="@string/_ravno"
            android:textSize="@dimen/key_text_size" />




    </LinearLayout>

</LinearLayout>